[gd_scene load_steps=4 format=3 uid="uid://xccl0mhlchqh"]

[ext_resource type="Script" path="res://prog82a.gd" id="1_mj7kd"]

[sub_resource type="LabelSettings" id="LabelSettings_6p77e"]
font_size = 35

[sub_resource type="CanvasTexture" id="CanvasTexture_kac5d"]

[node name="prog82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mj7kd")

[node name="output" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 445.0
offset_right = 522.0
offset_bottom = 636.0

[node name="txtlimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 549.0
offset_top = 16.0
offset_right = 1063.0
offset_bottom = 209.0

[node name="txtspeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 547.0
offset_top = 229.0
offset_right = 1061.0
offset_bottom = 422.0

[node name="lbl_limit" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 22.0
offset_right = 510.0
offset_bottom = 201.0
text = "Eitner the Speed limit:"
label_settings = SubResource("LabelSettings_6p77e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_speed" type="Label" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 232.0
offset_right = 523.0
offset_bottom = 411.0
text = "Eitner the Vehicle Speed:"
label_settings = SubResource("LabelSettings_6p77e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 546.0
offset_top = 454.0
offset_right = 706.0
offset_bottom = 605.0
text = "Calculate"
icon = SubResource("CanvasTexture_kac5d")

[node name="BtnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 721.0
offset_top = 454.0
offset_right = 881.0
offset_bottom = 605.0
text = "Clear
"

[node name="BtnExit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 896.0
offset_top = 454.0
offset_right = -96.0
offset_bottom = -43.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit
"

[connection signal="pressed" from="BtnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="BtnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="BtnExit" to="." method="_on_btn_exit_pressed"]
